--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -8,7 +8,7 @@
     8070
   ],
   "postCreateCommand": "uv sync --all-extras",
-  "postStartCommand": "uv run uvicorn src.main:app --host 0.0.0.0 --port 8070 --reload",
+  "postStartCommand": "uv run uvicorn app.main:app --host 0.0.0.0 --port 8070 --reload",
   "remoteEnv": {
     "PYTHONPATH": "/workspace"
   },
