chore: small fix

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,9 @@
+# Project
+PROJECT_NAME="Celine Digital Twin APIs"
+VERSION="1.0.0-SNAPSHOT"
+ENVIRONMENT="development"
+DEBUG="True"
+
 # PostgreSQL
 POSTGRES_USER="user"
 POSTGRES_PASSWORD="password"
