feat: add catalogue model, add alembic support

--- a/.env.example
+++ b/.env.example
@@ -1,13 +1,14 @@
-# Project
-PROJECT_NAME="Celine Digital Twin APIs"
-VERSION="1.0.0-SNAPSHOT"
-ENVIRONMENT="development"
-DEBUG="True"
+APP_NAME=Dataset API
+ENV=dev
 
-# PostgreSQL
-POSTGRES_USER="user"
-POSTGRES_PASSWORD="password"
-POSTGRES_DB="db"
-POSTGRES_HOST="host"
-POSTGRES_PORT="port"
-POSTGRES_SCHEMA="schema"
+API_BASE_URL=http://localhost:8000
+CATALOG_URI=https://example.org/catalog
+DATASET_BASE_URI=https://example.org/dataset/
+
+DATABASE_URL=postgresql+psycopg://postgres:securepassword123@localhost:15432/datasets
+CATALOGUE_SCHEMA=dataset_api
+
+MARQUEZ_URL=http://localhost:5000
+MARQUEZ_NAMESPACE=default
+
+LOG_LEVEL=INFO
