--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,13 +1,15 @@
 [project]
-name = "digitaltwin-api"
+name = "dataset"
 version = "0.1.0"
 description = "CELINE Digital Twin API prototype"
 readme = "README.md"
 requires-python = ">=3.11"
 
 dependencies = [
+    "alembic>=1.17.2",
     "asyncpg>=0.30.0",
     "fastapi>=0.121.2",
+    "httpx>=0.28.1",
     "pydantic-settings>=2.12.0",
     "sqlalchemy>=2.0.44",
     "sqlmodel>=0.0.27",
@@ -15,3 +17,8 @@ dependencies = [
 ]
 
 [tool.uv]  # optional, helps uv handle locking
+
+[tool.setuptools.packages.find]
+where = ["dataset"]
+include = ["dataset*"]
+exclude = ["tests*"]
