--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,12 +21,13 @@ dependencies = [
 package = true
 
 [tool.setuptools.packages.find]
-where = ["dataset"]
 include = ["dataset*"]
 exclude = ["tests*"]
 
 [dependency-groups]
 dev = [
+    "pytest>=9.0.2",
+    "pytest-asyncio>=1.3.0",
     "semantic-release>=0.1.0",
 ]
 
