feat: add SQL interface

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
-APP_NAME=Dataset API
 ENV=dev
+LOG_LEVEL=INFO
 
 API_BASE_URL=http://localhost:8000
 CATALOG_URI=https://example.org/catalog
@@ -11,4 +11,7 @@ CATALOGUE_SCHEMA=dataset_api
 MARQUEZ_URL=http://localhost:5000
 MARQUEZ_NAMESPACE=default
 
-LOG_LEVEL=INFO
+KEYCLOAK_ISSUER=https://keycloak.example.com/realms/myrealm
+KEYCLOAK_AUDIENCE=dataset-api
+OPA_URL=http://opa:8181
+OPA_DATASET_POLICY_PATH=dataset/access
