--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,9 +9,12 @@ dependencies = [
     "alembic>=1.17.2",
     "asyncpg>=0.30.0",
     "fastapi>=0.121.2",
+    "geoalchemy2>=0.18.1",
     "httpx>=0.28.1",
     "pydantic-settings>=2.12.0",
+    "python-jose[cryptography]>=3.5.0",
     "sqlalchemy>=2.0.44",
+    "sqlglot>=28.1.0",
     "sqlmodel>=0.0.27",
     "typer>=0.20.0",
     "uvicorn[standard]>=0.38.0",
