--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,7 @@ exclude = ["tests*"]
 
 [dependency-groups]
 dev = [
+    "aiosqlite>=0.21.0",
     "pytest>=9.0.2",
     "pytest-asyncio>=1.3.0",
     "semantic-release>=0.1.0",
