--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ dependencies = [
     "httpx>=0.28.1",
     "pydantic-settings>=2.12.0",
     "python-jose[cryptography]>=3.5.0",
+    "rdflib>=7.5.0",
     "sqlalchemy>=2.0.44",
     "sqlglot>=28.1.0",
     "sqlmodel>=0.0.27",
