--- a/taskfile.yaml
+++ b/taskfile.yaml
@@ -58,3 +58,7 @@ tasks:
       - uv run semantic-release -v version --no-vcs-release
       - git push
       - git push --tags
+
+  dump-source:
+    cmds:
+      - uv run python scripts/dump_source.py
