--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "alembic>=1.17.2",
     "asyncpg>=0.30.0",
     "fastapi>=0.121.2",
+    "fastapi-keycloak>=1.1.1",
     "geoalchemy2>=0.18.1",
     "httpx>=0.28.1",
     "pydantic-settings>=2.12.0",
