--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,6 @@ dependencies = [
     "alembic>=1.17.2",
     "asyncpg>=0.30.0",
     "fastapi>=0.121.2",
-    "fastapi-keycloak>=1.1.1",
     "geoalchemy2>=0.18.1",
     "httpx>=0.28.1",
     "pydantic-settings>=2.12.0",
@@ -33,6 +32,7 @@ exclude = ["tests*"]
 [dependency-groups]
 dev = [
     "aiosqlite>=0.21.0",
+    "debugpy>=1.8.19",
     "pytest>=9.0.2",
     "pytest-asyncio>=1.3.0",
     "python-semantic-release>=10.5.3",
