--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,6 +33,7 @@ exclude = ["tests*"]
 dev = [
     "aiosqlite>=0.21.0",
     "debugpy>=1.8.19",
+    "hypothesis>=6.148.8",
     "pytest>=9.0.2",
     "pytest-asyncio>=1.3.0",
     "python-semantic-release>=10.5.3",
