--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,6 +37,7 @@ dev = [
     "pytest>=9.0.2",
     "pytest-asyncio>=1.3.0",
     "python-semantic-release>=10.5.3",
+    "dumpster-cli>=1.3.2",
 ]
 
 
