--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,7 +25,7 @@ dependencies = [
 package = true
 
 [tool.setuptools.packages.find]
-where = ["."]
+where = ["src"]
 include = ["celine.dataset*"]
 exclude = ["tests*"]
 
