--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
     "fastapi>=0.121.2",
     "geoalchemy2>=0.18.1",
     "httpx>=0.28.1",
+    "psycopg[binary]>=3.3.2",
     "pydantic-settings>=2.12.0",
     "python-jose[cryptography]>=3.5.0",
     "rdflib>=7.5.0",
