chore: review packaging and docker setup

--- a/.env.example
+++ b/.env.example
@@ -1,17 +1,14 @@
 ENV=dev
 LOG_LEVEL=INFO
 
-API_BASE_URL=http://localhost:8000
-CATALOG_URI=https://example.org/catalog
-DATASET_BASE_URI=https://example.org/dataset/
+API_BASE_URL=http://api.celine.localhost/datasets
+CATALOG_URI=https://api.celine.localhost/datasets/catalog
+DATASET_BASE_URI=http://api.celine.localhost/datasets/dataset
 
-DATABASE_URL=postgresql+psycopg://postgres:securepassword123@localhost:15432/datasets
-CATALOGUE_SCHEMA=dataset_api
+DATABASE_URL=postgresql+psycopg://postgres:securepassword123@172.17.0.1:15432/datasets
 
-MARQUEZ_URL=http://localhost:5000
+MARQUEZ_URL=http://marquez.celine.localhost
 MARQUEZ_NAMESPACE=default
 
-KEYCLOAK_ISSUER=https://keycloak.example.com/realms/myrealm
-KEYCLOAK_AUDIENCE=dataset-api
-OPA_URL=http://opa:8181
-OPA_DATASET_POLICY_PATH=dataset/access
+KEYCLOAK_ISSUER=https://keycloak.celine.localhost/realms/celine
+KEYCLOAK_AUDIENCE=svc-dataset-api
