--- a/taskfile.yaml
+++ b/taskfile.yaml
@@ -4,7 +4,7 @@ tasks:
   run:
     desc: "Run development server"
     cmds:
-      - uv run uvicorn celine.dataset.main:create_app --reload --host 0.0.0.0 --port 8001
+      - .venv/bin/uvicorn celine.dataset.main:create_app --reload --host 0.0.0.0 --port 8001
   debug:
     desc: "Run development server with debugger"
     cmds:
