--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
     "fastapi>=0.121.2",
     "geoalchemy2>=0.18.1",
     "httpx>=0.28.1",
+    "jinja2>=3.1.6",
     "psycopg[binary]>=3.3.2",
     "pydantic-settings>=2.12.0",
     "python-jose[cryptography]>=3.5.0",
@@ -26,17 +27,18 @@ dependencies = [
 [tool.uv]  # optional, helps uv handle locking
 package = true
 
-[tool.setuptools.packages.find]
-where = ["src"]
-include = ["celine.dataset*"]
-exclude = ["tests*"]
+[build-system]
+requires = ["hatchling"]
+build-backend = "hatchling.build"
 
-[tool.setuptools.package-data]
-"celine.dataset" = [
-    "static/**/*",
-    "templates/**/*",
-]
+[tool.hatch.build.targets.wheel]
+only-include = ["src/celine/dataset"]
+sources = {"src" = ""}
 
+[tool.hatch.build.targets.wheel.force-include]
+# Ensure static and template files are bundled in the wheel
+"src/celine/dataset/static" = "celine/dataset/static"
+"src/celine/dataset/templates" = "celine/dataset/templates"
 
 
 [dependency-groups]
